		- log structural forces (Reinhard Resch)
		- log missing joint types
		- allow boolean in node/element output flag (Reinhard Resch)
		- added support for 'counter' output flag (Reinhard Resch)
		- added generic rotor trim genel
		- added basic support for underdetermined inverse dynamics
		- added MLS files for domain mapping (Giuseppe Quaranta)
		- added periodic drive caller
	Backward compatibility issues:
		- the (undocumented) output of the total (pin) joint changed
		- the induced velocity element internal API changed
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
	Bug fixes:
		- fix node label in external structural force output
		- fix typo in eigenanalysis documentation (Patrick Rix)
		- fix working directory setting
		- fix input/output file name inconsistencies
		- fix crash in eigenvectors output (noted by Reinhard Resch)
		- fix build with Intel's icpc
		- fix parameter node use in elems (noted by Reinhard Resch)
		- fix arpack counter for non terminal (Reinhard Resch)
		- fix label alignment in strext (noted by Mirco Valentini)
		- fix index in full submatrix add to full matrix (unused)
		- fix rigid-body inertia of modal joint (record 12)
		  when modal node is not in CM (noted by Paolo Zaltron)

MBDyn 1.4.0
	Enhancements:
		- added shell element (Marco Morandini, Riccardo Vescovini)
		- added more verbose info to mapping file generated by
		  create_mls_interface
		- added multiple flavors of Glauert inflow
		- added output flag to .out file
		- added GiNaC-based symbolic drive caller
		- log "body" data (Reinhard Resch)
		- improve umfpack version detection (supports >= 5 only)
		- potential energy private data for rigid bodies
		  (Louis Gagnon)
		- allow meta-data in fixed-step file drive input file
		- added more functions to model namespace
		- added previous time step functions to model namespace
		- added support for f95 modules (Reinhard Resch)