@@ -432,9 +432,13 @@ at the previous, just completed time step.
 				evaluates the \htmlref{\kw{drive caller}}{sec:DRIVE-CALLER}
 				indicated by its label (the first argument)
 				for the input specified as second argument \\
-		\kw{sf}\texttt{::}\bnt{name}	& Real	& Real			&
+		\kw{sf}\texttt{::}\bnt{name}	& Real	& Real, (opt)Integer	&
 				evaluates the \htmlref{\kw{scalar function}}{sec:SCALARFUNCS}
-				\nt{name} for the input specified as argument \\
+				\nt{name} for the input specified as argument (value, optional derivative order) \\
+		\kw{node}\texttt{::}\bnt{type} & Real & Integer, String	&
+				evaluates a private datum of a node (label, string) \\
+		\kw{element}\texttt{::}\bnt{type} & Real & (opt)Integer, String	&
+				evaluates a private datum of an element (label, string) \\
 		\hline
 	\end{tabular}
 	\end{center}
